--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -1,29 +1,35 @@
-name: OWASP Dependency Check
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push]
 
 jobs:
-  security_scan:
+  depchecktest:
     runs-on: ubuntu-latest
-
+    name: depecheck_test
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '12'
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '12' # specify your Node.js version
 
-    - name: Install NPM dependencies
-      run: npm install
+      - name: Install NPM dependencies
+        run: npm install
 
-    - name: OWASP Dependency Check
-      uses: DependencyTrack/dependency-check-action@v3
-      with:
-        format: 'HTML'
-        failBuildOnCVSS: 5
-        path: './'
+      - name: Depcheck
+        uses: dependency-check/Dependency-Check_Action@main
+        id: Depcheck
+        with:
+          project: 'elasticsearch-kopf'
+          path: '.'
+          format: 'HTML'
+          out: 'reports'
+          args: >
+            --failOnCVSS 7
+            --enableRetired
+
+      - name: Upload Dependency Check report
+        uses: actions/upload-artifact@master
+        with:
+           name: Depcheck report
+           path: ${{github.workspace}}/reports
