--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '12' # specify your Node.js version
+          node-version: '12'
 
       - name: Install NPM dependencies
         run: npm install
